<resources>
    <string name="app_name">Burn, Track, Repeat.</string>
    <string name="twerk">TWERK</string>
    <string name="after_twerk">Timer Workout for Energy Release of Kilocalories</string>
    <string name="variable">Variable Mode</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="sounds">Sounds</string>
    <string name="infinity_symbol">&#8734;</string>
    <string name="infinity_test">\u221e</string>
    <string name="test_infinity"><font fgcolor='#ffffffff'>&#8734;</font></string>
    <string name="arrow_down">\u2193</string>
    <string name="arrow_up">\u2191</string>
    <string name="string_up_arrow">"\u25B2"</string>
    <string name="string_down_arrow">"\u25BC"</string>
    <string name="hollow_up_arrow">\u21e7</string>
    <string name="hollow_down_arrow">\u21e9</string>
    <string name="filled_up_arrow">\u2b06</string>
    <string name="filled__down_arrow">\u2b07</string>
    <string name="filled_right_arrow">\u27a1</string>
    <string name="no_sets">Breaks Only</string>
    <string name="reset">Reset</string>
    <string name="clear_cycles">Reset Count</string>
    <string name="skip_round">Skip Round</string>
    <string name="set_time">Sets</string>
    <string name="break_time">Breaks</string>
    <string name="rounds">Rounds:</string>
    <string name="work_time">Work</string>
    <string name="small_break">Break</string>
    <string name="long_break">Rest</string>
    <string name="cycles_done">Cycles Completed: %1$s</string>
    <string name="total_daily_time">Activity Time:</string>
    <string name="total_daily_calories">Calories Burned:</string>
    <string name="total_daily_time_for_single_activity">Activity Time:</string>
    <string name="total_daily_calories_for_single_activity">Calories Burned:</string>
    <string name="overtime">- %1$s</string>
    <string name="confirm_cycle_reset">Confirm</string>
    <string name="delete_cycles_times_and_completed_cycles">Delete time and cycle totals?</string>
    <string name="delete_all_cycles">Are you sure? This will delete all cycles!</string>
    <string name="delete_activities_from_selected_duration">Delete all activities in current date range?</string>
    <string name="delete_all_activities">Delete all activities from all days?\nThis cannot be undone!</string>
    <string name="delete_food_from_single_day">Delete all foods in current date range?</string>
    <string name="delete_all_foods">Delete all foods from all days?\nThis cannot be undone!</string>
    <string name="delete_activities_and_foods_from_selected_duration">Delete all activities and foods in current date range?</string>
    <string name="delete_all_activities_and_foods">Delete all activities and foods from all days?\nThis cannot be undone!</string>
    <string name="lap">New Lap</string>
    <string name="clear_laps">Clear Laps</string>
    <string name="laps_completed">Laps Completed: %1$s</string>
    <string name="delete_total_laps">Reset lap count?</string>
    <string name="delete_highlighted_cycles">Save</string>
    <string name="update_cycles">Update</string>
    <string name="sort_cycles">Sort</string>
    <string name="saved_cycle_list">Saved Cycles</string>
    <string name="tracking_daily_stats">Daily Total For %1$s</string>
    <string name="cycle_saved">Cycle saved!</string>
    <string name="cycle_exists">Identical cycle already exists!</string>
    <string name="bullet">\u2022</string>
    <string name="cycle_name_hint">Title (Squats, Rows, Etc.)</string>
    <string name="pom_cycle_name_hint">Task (Studying, Working, Etc.)</string>
    <string name="default_title">My Uber Workout</string>
    <string name="tdee_track"><b>Track\nCalories</b></string>
    <string name="no_activity_assigned">No Activity</string>
    <string name="max_value_reached">Maximum value reached!</string>
    <string name="min_value_reached">Minimum value reached!</string>
    <string name="total_sets">Set Time:</string>
    <string name="total_breaks">Break Time:</string>
    <string name="total_work">Work Time:</string>
    <string name="round_numbers">%1$s - </string>
    <string name="workout_rounds">%1$s - %2$s</string>
    <string name="empty_cycle_list">Nothing here!</string>
    <string name="empty_laps_list">No laps yet!</string>
    <string name="sounds_and_vibrations">Sounds and Vibrations</string>
    <string name="colors_schemes">Colors</string>
    <string name="set_sounds">Sets:</string>
    <string name="break_sounds">Breaks:</string>
    <string name="work_sounds">Work:</string>
    <string name="mini_break_sounds">Short Break:</string>
    <string name="long_break_sounds">Long Break:</string>
    <string name="notification_text_header">%1$s - On %2$s </string>
    <string name="notification_text">Round %1$s of %2$s - %3$s</string>
    <string name="notification_stopwatch_header">Stopwatch</string>
    <string name="paused">Paused</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="workout_mode">Workout Mode</string>
    <string name="pomodoro_mode">Pomodoro Mode</string>
    <string name="total_assigned_stats">Total:</string>
    <string name="total_unassigned_stats">Non-Activity:</string>
    <string name="total_aggregate_stats">Combined:</string>
    <string name="consumed_calories_header">Calories Consumed</string>
    <string name="expended_calories_header">Calories Expended</string>
    <string name="compared_calories_header">Calories Compared</string>
    <string name="consumed_calories">Calories Consumed:</string>
    <string name="expended_calories">Calories Burned:</string>
    <string name="expended_calories_bmr">Metabolic Rate:</string>
    <string name="expended_calories_activities">Activities:</string>
    <string name="difference_calories">Caloric Difference:</string>
    <string name="difference_weight">Lb/Kg Difference: </string>
    <string name="metabolic_rate">Metabolic Rate:</string>
    <string name="bmr_abbreviated">BMR:</string>
    <string name="activity_stats_string">%1$s\n%2$s</string>
    <string name="day_total_header">Daily</string>
    <string name="weekly_total_header">Weekly</string>
    <string name="monthly_total_header">Monthly</string>
    <string name="year_to_date_header">Year-to-date</string>
    <string name="yearly_total_header">Yearly</string>
    <string name="custom_total_header">Custom</string>
    <string name="daily_set_time">Sets:</string>
    <string name="daily_break_time">Breaks:</string>
    <string name="daily_calories_burned">Calories:</string>
    <string name="date_duration_textView">%1$s - %2$s</string>
    <string name="double_zeros">"00"</string>
    <string name="colon">":"</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_multiple_add_or_edit_activities">This will overwrite any existing activities for the selected days.</string>
    <string name="activity_text_header">Activity</string>
    <string name="set_time_text_header">Time</string>
    <string name="calories_burned_text_header">Calories</string>
    <string name="per_hour">Per hour</string>
    <string name="per_minute">Per minute</string>
    <string name="multiple_day_activity_addition_warning">This will <b>add</b> or <b>update</b> activity for all days in current date range.</string>
    <string name="multiple_day_activity_edit_warning">This will <b>update</b> or <b>delete</b> activity for all days in current date range.</string>
    <string name="multiple_food_addition_warning">This will <b>add</b> or <b>update</b> food for all days in current date range.</string>
    <string name="multiple_food_edit_warning">This will <b>update</b> or <b>delete</b> food for all days in current date range.</string>
    <string name="current_day">Selected day</string>
    <string name="date_range">Date range</string>
    <string name="food_name_header">Food/Drink</string>
    <string name="food_name_header_underlined"><u>Food/Drink</u></string>
    <string name="food_portion_header">Portion</string>
    <string name="calories_header"><u>Calories</u></string>
    <string name="double_placeholder">%1$s%2$s</string>
    <string name="four_strings_slash_divided">%1$s%2$s / %3$s%4$s</string>
    <string name="day_time_remaining">%1$s remaining</string>
    <string name="note_total">%1$s - On %2$s\nRound %3$s of %4$s\n%5$s </string>
    <string name="bunch_of_spaces">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="bunch_of_spaces_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="empty_string"/>
    <string-array name="empty_array"/>
    <string name="line">\n</string>
    <string-array name="sound_setting_options">
        <item>Silent</item>
        <item>Vibrate Once</item>
        <item>Vibrate Twice</item>
        <item>Vibrate Thrice</item>
        <item>Ringtone</item>
    </string-array>
    <string-array name="sound_setting_option_values">
        <item>silent</item>
        <item>vibrate_once</item>
        <item>vibrate_twice</item>
        <item>vibrate_thrice</item>
        <item>use_ringtone</item>
    </string-array>
    <string-array name="color_setting_options">
        <item>Green</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Magenta</item>
        <item>Cyan</item>
    </string-array>
    <string-array name="color_setting_option_values">
        <item>green_setting</item>
        <item>orange_setting</item>
        <item>blue_setting</item>
        <item>yellow_setting</item>
        <item>magenta_setting</item>
        <item>cyan_setting</item>
    </string-array>
    <string name="spinner_value">%1$s %2$s</string>
    <string name="bmr_value">%1$s / day</string>
    <string name="activity_duration">Duration:</string>
    <string name="add_activity">Add an activity!</string>
    <string name="met_score">MET Score: \n%1$s</string>
    <string name="met_score_single_line">MET Score: %1$s</string>
    <string name="calories_burned">Calories Burned: %1$s</string>
    <string name="calories_burned_per_minute">Calories Burned Per Minute: %1$s</string>
    <string name="calories_burned_per_hour">Calories Burned Per Hour: %1$s</string>
    <string name="two_line_concat">%1$s\n%2$s</string>
    <string name="calories_burned_per_cycle">%1$s \n Calories Burned: %2$s</string>
    <string name="okay">Okay</string>
    <string name="no_activity">No Activity Selected</string>
    <string name="basic">Basic</string>
    <string name="tdee_button">TDEE</string>
    <string name="met">MET</string>
    <string name="custom">Custom</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="tdee">Daily TDEE:</string>
    <string name="calories">Calories</string>
    <string name="average">Avg. Hourly:</string>
    <string name="total_daily_calories_burned">Calories Burned:</string>
    <string name="calculate">Calculate!</string>
    <string name="two_part">%1$s  %2$s</string>
    <string name="add">Add to Custom Calculator</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="activity_level">Activity Level:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="act_0">Fully Sedentary</string>
    <string name="act_1">Mostly Inactive</string>
    <string name="act_2">Slightly Active</string>
    <string name="act_3">Moderately Active</string>
</resources>