<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/settings_border">

    <TextView
        android:id="@+id/sound_settings"
        android:text="@string/sounds_and_vibrations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="1dp"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/color_settings"
        android:text="@string/colors_schemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sound_settings"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/about_settings"
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/color_settings"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="1dp"
        android:textSize="20sp">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>