<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/black_gradient_background">

    <TextView
        android:id="@+id/add_food_name_header"
        android:text="@string/food_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        android:textSize="22sp">
    </TextView>

    <EditText
        android:id="@+id/food_name_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_food_name_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@null"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:maxLength="35"
        android:maxLines="2"
        android:minWidth="50dp"
        android:maxWidth="175dp"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:textColorHint="@color/light_grey">
    </EditText>

    <TextView
        android:id="@+id/add_calories_consumed_header"
        android:text="@string/calories_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/food_name_add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="22sp">
    </TextView>

    <EditText
        android:id="@+id/add_calories_consumed_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_calories_consumed_header"
        android:layout_marginTop="4dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@null"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:singleLine="true"
        android:maxLength="4"
        android:inputType="number"
        android:hint="0"
        android:textColorHint="@color/light_grey">
    </EditText>

    <TextView
        android:id="@+id/add_or_edit_current_food_only_textView"
        android:text="@string/current_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/confirm_calories_consumed_delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_or_edit_all_selected_foods_textView"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp">
    </TextView>

    <TextView
        android:id="@+id/add_or_edit_all_selected_foods_textView"
        android:text="@string/date_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/confirm_calories_consumed_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_or_edit_current_food_only_textView"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_calories_consumed_add_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/Gray"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_calories_consumed_delete_button"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="6dp"
        android:backgroundTint="@color/Gray"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>