<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imperial_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/metric_setting"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/test_blue"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/metric_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/imperial_setting"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/test_blue"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/gender_text"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imperial_setting"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/age_text"
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gender_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/weight_text"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/age_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/height_text"
        android:text="@string/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weight_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/activity_level_text"
        android:text="@string/activity_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/height_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imperial_setting"
        android:layout_marginTop="18dp"
        android:layout_marginStart="175dp"
        android:popupBackground="@color/black">
    </Spinner>

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="175dp"
        android:popupBackground="@color/black">
    </Spinner>

    <Spinner
        android:id="@+id/weight_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="175dp"
        android:popupBackground="@color/black">
    </Spinner>

    <Spinner
        android:id="@+id/height_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="175dp"
        android:popupBackground="@color/black">
    </Spinner>

    <Spinner
        android:id="@+id/activity_level_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="175dp"
        android:popupBackground="@color/black">
    </Spinner>

    <TextView
        android:id="@+id/user_settings_calories_burned_header"
        android:text="@string/total_daily_calories_burned"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_settings_calories_burned_textView"
        app:layout_constraintTop_toBottomOf="@id/activity_level_spinner"
        android:layout_marginTop="32dp"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:minLines="2">
    </TextView>

    <TextView
        android:id="@+id/user_settings_calories_burned_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_level_spinner"
        android:layout_marginTop="32dp"
        android:layout_marginStart="175dp"
        android:textSize="22sp">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_tdee_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_settings_calories_burned_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/test_blue"
        app:cornerRadius="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>